--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<title>Maria Comas | Web Developer</title>
+	<title>Maria Comas | About</title>
 </head>
 
 <body>
@@ -15,15 +15,15 @@
 		</div>
 		<nav>
 	      <ul>
-	        <li>Portfolio</li>
-	        <li><a href="about.html">About</a></li>
+	        <li><a href="index.html">Portfolio</a></li>
+	        <li>About</li>
 	        <li><a href="outputs.html">Outputs</a></li>
 	        <li><a href="inputs.html">Inputs</a></li>
 	      </ul>
 	    </nav>
 	</header>
 <main>
-		<h2>Portfolio</h2>
+		<h2>About</h2>
 </main>
 
 <footer></footer>
