--- a/outputs.html
+++ b/outputs.html
@@ -16,9 +16,9 @@
 		<nav>
 	      <ul>
 	        <li><a href="index.html">Portfolio</a></li>
-	        <li><a href="#">About</a></li>
+	        <li><a href="about.html">About</a></li>
 	        <li>Outputs</li>
-	        <li><a href="#">Inputs</a></li>
+	        <li><a href="inputs.html">Inputs</a></li>
 	      </ul>
 	    </nav>
 	</header>
@@ -40,39 +40,45 @@
 	</section>
 	<section>
 		<h2>Photos</h2>
-		<figure>
-			<picture>
-				<source
-			        media="(min-width: 750px)"
-			        srcset="images/IMG_2862-1600_large_2x.jpg 2x, images/IMG_2862-800_large_1x.jpg">
-			    <source
-			        media="(min-width: 500px)"
-			        srcset="images/IMG_2862-1000_medium_2x.jpg">  
-			    <img src="images/IMG_2862-500_medium_1x.jpg" alt="Davis mountains">
-			</picture>
-		</figure>
-		<figure>
-			<picture>
-				<source
-			        media="(min-width: 750px)"
-			        srcset="images/IMG_3086-1600_large_2x.jpg 2x, images/IMG_3086-800_large_1x.jpg">
-			    <source
-			        media="(min-width: 500px)"
-			        srcset="images/IMG_3086-1000_medium_2x.jpg">  
-			    <img src="images/IMG_3086-500_medium_1x.jpg" alt="Davis mountains">
-			</picture>
-		</figure>
-		<figure>
-			<picture>
-				<source
-			        media="(min-width: 750px)"
-			        srcset="images/IMG_3367-1600_large_2x.jpg 2x, images/IMG_3367-800_large_1x.jpg">
-			    <source
-			        media="(min-width: 500px)"
-			        srcset="images/IMG_3367-1000_medium_2x.jpg">  
-			    <img src="images/IMG_3367-500_medium_1x.jpg" alt="Davis mountains">
-			</picture>
-		</figure>
+			<div class="photo-card">
+				<figure>
+					<picture>
+						<source
+					        media="(min-width: 750px)"
+					        srcset="images/IMG_2862-1600_large_2x.jpg 2x, images/IMG_2862-800_large_1x.jpg">
+					    <source
+					        media="(min-width: 500px)"
+					        srcset="images/IMG_2862-1000_medium_2x.jpg">  
+					    <img src="images/IMG_2862-500_medium_1x.jpg" alt="Davis mountains">
+					</picture>
+				</figure>
+			</div>
+		<div class="photo-card">
+			<figure>
+					<picture>
+						<source
+					        media="(min-width: 750px)"
+					        srcset="images/IMG_3086-1600_large_2x.jpg 2x, images/IMG_3086-800_large_1x.jpg">
+					    <source
+					        media="(min-width: 500px)"
+					        srcset="images/IMG_3086-1000_medium_2x.jpg">  
+					    <img src="images/IMG_3086-500_medium_1x.jpg" alt="Davis mountains">
+					</picture>
+				</figure>
+		</div>
+		<div class="photo-card">
+			<figure>
+					<picture>
+						<source
+					        media="(min-width: 750px)"
+					        srcset="images/IMG_3367-1600_large_2x.jpg 2x, images/IMG_3367-800_large_1x.jpg">
+					    <source
+					        media="(min-width: 500px)"
+					        srcset="images/IMG_3367-1000_medium_2x.jpg">  
+					    <img src="images/IMG_3367-500_medium_1x.jpg" alt="Davis mountains">
+					</picture>
+				</figure>
+		</div>
 	</section>
 </main>
 
