--- a/inputs.html
+++ b/inputs.html
@@ -16,7 +16,7 @@
 		<nav>
 	      <ul>
 	        <li><a href="index.html">Portfolio</a></li>
-	        <li><a href="#">About</a></li>
+	        <li><a href="about.html">About</a></li>
 	        <li><a href="outputs.html">Outputs</a></li>
 	        <li>Inputs</li>
 	      </ul>
